--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 300px;
+  height: 80%;
 }
 
 .input-questions label {
@@ -65,6 +65,7 @@ body {
   text-align: center;
   font-size: 20px;
   width: 200px;
+  z-index: 100;
 }
 .main-content input::-webkit-outer-spin-button,
 .main-content input::-webkit-inner-spin-button {
@@ -73,7 +74,8 @@ body {
 .main-content input:focus {
   outline: none;
 }
-.btn-start {
+.btn-start,
+.btn-play-again {
   font-size: 20px;
   padding: 15px;
   background-color: #fff;
@@ -81,6 +83,7 @@ body {
   border-radius: 20px;
   transition: 0.5s ease;
   width: 200px;
+  z-index: 100;
 }
 .btn-start:hover {
   transform: scale(1.1);
@@ -89,10 +92,14 @@ body {
 .btn-start:focus {
   outline: none;
 }
+
+.btn-play-again {
+  display: none;
+}
 .alert-message {
   color: red;
-  margin-top: 20px;
-  display: none;
+  margin-top: 50px;
+  visibility: hidden;
   text-transform: uppercase;
 }
 
@@ -118,6 +125,31 @@ body {
     50% 85%,
     0% 85%
   );
+}
+
+.score {
+  position: absolute;
+  top: 5%;
+  background-color: wheat;
+  color: black;
+  width: 80%;
+  height: 90%;
+  padding: 50px 20px 0 20px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  font-size: 30px;
+  display: none;
+}
+
+.score span {
+  color: red;
+}
+.score h3 {
+  position: absolute;
+  top: 60%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .next-questionBtn {
