--- a/style.css
+++ b/style.css
@@ -1,20 +1,40 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
 
+:root {
+  --col-white: #fff;
+  --col-black: #000000;
+  --col-red: #ff0000;
+  --col-wheat: #f5deb3;
+  --col-light-green: #1e691e;
+  --col-dark-green: #57b11b40;
+  --color-blue: #0000ff;
+}
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 body {
-  background-color: rgb(255, 255, 255);
-  color: #fff;
+  background: #50c9c3; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #96deda,
+    #50c9c3
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #96deda,
+    #50c9c3
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
   font-family: 'Roboto', sans-serif;
 }
 
 .header {
   height: 10vh;
-  color: black;
-  background-color: rgb(246, 246, 246, 0.5);
+  color: var(--col-black);
+
   width: 100%;
   display: flex;
   justify-content: center;
@@ -25,13 +45,13 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 150px;
+  height: 90vh;
 }
 
 .quiz-container {
   width: 50%;
   height: 700px;
-  background-color: #fff;
+  background-color: var(--col-white);
   flex-direction: column;
   display: flex;
   justify-content: center;
@@ -50,7 +70,7 @@ body {
 }
 
 .input-questions label {
-  color: black;
+  color: var(--col-black);
   font-size: 20px;
   padding-bottom: 10px;
   text-transform: uppercase;
@@ -59,7 +79,7 @@ body {
 
 .main-content input {
   padding: 10px;
-  background-color: rgb(255, 255, 255);
+  background-color: var(--col-white);
   box-shadow: 2px 2px 5px 5px rgba(0, 0, 0, 0.25);
   border: none;
   text-align: center;
@@ -78,7 +98,7 @@ body {
 .btn-play-again {
   font-size: 20px;
   padding: 15px;
-  background-color: #fff;
+  background-color: var(--col-white);
   box-shadow: 2px 2px 5px 5px rgba(0, 0, 0, 0.25);
   border-radius: 20px;
   transition: 0.5s ease;
@@ -97,7 +117,7 @@ body {
   display: none;
 }
 .alert-message {
-  color: red;
+  color: var(--col-red);
   margin-top: 50px;
   visibility: hidden;
   text-transform: uppercase;
@@ -106,11 +126,11 @@ body {
 .question {
   position: absolute;
   top: 5%;
-  background-color: wheat;
+  background-color: var(--col-wheat);
   width: 500px;
   height: 220px;
   padding: 20px;
-  color: black;
+  color: var(--col-black);
   font-size: 30px;
   text-align: center;
   display: flex;
@@ -130,8 +150,8 @@ body {
 .score {
   position: absolute;
   top: 5%;
-  background-color: wheat;
-  color: black;
+  background-color: var(--col-wheat);
+  color: #000000;
   width: 80%;
   height: 90%;
   padding: 50px 20px 0 20px;
@@ -143,7 +163,7 @@ body {
 }
 
 .score span {
-  color: red;
+  color: #ff0000;
 }
 .score h3 {
   position: absolute;
@@ -159,8 +179,8 @@ body {
   bottom: 5%;
   font-size: 20px;
   padding: 15px;
-  background-color: rgb(30, 105, 30);
-  box-shadow: px 1px 1px 0px rgba(87, 177, 27, 0.25);
+  background-color: #1e691e;
+  box-shadow: px 1px 1px 0px #57b11b40;
   border-radius: 20px;
   transition: 0.5s ease;
   width: 200px;
@@ -201,7 +221,7 @@ li:hover {
 }
 
 .correct-answer {
-  background-color: blue;
+  background-color: #0000ff;
 }
 .incorrect-answer {
   background-color: red;
