--- a/style.css
+++ b/style.css
@@ -16,6 +16,10 @@
   box-sizing: border-box;
 }
 body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   background: #50c9c3; /* fallback for old browsers */
   background: -webkit-linear-gradient(
     to right,
@@ -32,33 +36,22 @@ body {
 }
 
 .header {
-  height: 10vh;
   color: var(--col-black);
-
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  padding-top: 25px;
-}
-
-.main-content {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 90vh;
+  text-align: center;
+  margin: 50px 0;
 }
 
 .quiz-container {
-  width: 50%;
-  height: 700px;
-  background-color: var(--col-white);
-  flex-direction: column;
+  width: 60%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-color: var(--col-white);
+  padding-bottom: 100px;
+  margin-bottom: 200px;
   border-radius: 10px;
   box-shadow: 1px 0px 8px 5px rgba(0, 0, 0, 0.2);
-  position: relative;
 }
 
 .input-questions {
@@ -66,7 +59,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 80%;
+  margin-top: 150px;
 }
 
 .input-questions label {
@@ -77,38 +70,40 @@ body {
   text-align: center;
 }
 
-.main-content input {
+.input-questions input {
   padding: 10px;
+  outline: none;
   background-color: var(--col-white);
   box-shadow: 2px 2px 5px 5px rgba(0, 0, 0, 0.25);
+  margin-bottom: 10px;
   border: none;
   text-align: center;
   font-size: 20px;
-  width: 200px;
   z-index: 100;
 }
-.main-content input::-webkit-outer-spin-button,
-.main-content input::-webkit-inner-spin-button {
+
+.input-questions input::-webkit-outer-spin-button,
+.input-questions input::-webkit-inner-spin-button {
   -webkit-appearance: none;
 }
-.main-content input:focus {
-  outline: none;
-}
+
 .btn-start,
 .btn-play-again {
   font-size: 20px;
-  padding: 15px;
+  padding: 20px 85px;
   background-color: var(--col-white);
   box-shadow: 2px 2px 5px 5px rgba(0, 0, 0, 0.25);
   border-radius: 20px;
   transition: 0.5s ease;
-  width: 200px;
   z-index: 100;
+  outline: none;
 }
+
 .btn-start:hover {
   transform: scale(1.1);
   cursor: pointer;
 }
+
 .btn-start:focus {
   outline: none;
 }
@@ -116,6 +111,12 @@ body {
 .btn-play-again {
   display: none;
 }
+
+.btn-play-again:hover {
+  transform: scale(1.1);
+  cursor: pointer;
+}
+
 .alert-message {
   color: var(--col-red);
   margin-top: 50px;
@@ -124,17 +125,12 @@ body {
 }
 
 .question {
-  position: absolute;
-  top: 5%;
   background-color: var(--col-wheat);
-  width: 500px;
-  height: 220px;
-  padding: 20px;
-  color: var(--col-black);
+  width: 80%;
   font-size: 30px;
+  padding: 250px 50px;
+  margin-bottom: 50px;
   text-align: center;
-  display: flex;
-  align-items: center;
   display: none;
   clip-path: polygon(
     0% 0%,
@@ -147,73 +143,32 @@ body {
   );
 }
 
-.score {
-  position: absolute;
-  top: 5%;
-  background-color: var(--col-wheat);
-  color: #000000;
-  width: 80%;
-  height: 90%;
-  padding: 50px 20px 0 20px;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  font-size: 30px;
-  display: none;
-}
-
-.score span {
-  color: #ff0000;
-}
-.score h3 {
-  position: absolute;
-  top: 60%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-.next-questionBtn {
-  color: #fff;
-  cursor: pointer;
-  position: absolute;
-  bottom: 5%;
-  font-size: 20px;
-  padding: 15px;
-  background-color: #1e691e;
-  box-shadow: px 1px 1px 0px #57b11b40;
-  border-radius: 20px;
-  transition: 0.5s ease;
-  width: 200px;
-  display: none;
-  text-transform: uppercase;
-}
-.next-questionBtn:hover {
-  transform: scale(1.1);
-}
 .answer-container {
   width: 100%;
-  height: 500px;
   display: flex;
   justify-content: center;
-  padding-top: 280px;
+  margin-bottom: 100px;
   display: none;
+}
+
+ul {
+  width: 60%;
 }
 
 li {
-  font-size: 20px;
-  color: black;
-  cursor: pointer;
-  list-style-type: none;
-  background-color: aqua;
-  margin: 10px;
-  width: 300px;
+  width: 100%;
   height: 50px;
-  text-align: center;
-  transition: 0.5s ease;
   display: flex;
   align-items: center;
   justify-content: center;
+  margin: 10px;
+  font-size: 20px;
+  cursor: pointer;
+  list-style-type: none;
+  background-color: aqua;
+  text-align: center;
   border-radius: 5px;
+  transition: 0.5s ease;
 }
 
 li:hover {
@@ -223,6 +178,7 @@ li:hover {
 .correct-answer {
   background-color: #0000ff;
 }
+
 .incorrect-answer {
   background-color: red;
 }
@@ -230,6 +186,35 @@ li:hover {
 .disabled {
   pointer-events: none;
   opacity: 0.6;
+}
+
+.next-questionBtn {
+  color: #fff;
+  cursor: pointer;
+  font-size: 20px;
+  background-color: #1e691e;
+  box-shadow: 5px 1px 1px 0px #57b11b40;
+  border-radius: 20px;
+  transition: 0.5s ease;
+  width: 30%;
+  padding: 30px 30px;
+  display: none;
+  text-transform: uppercase;
+  text-align: center;
+  outline: none;
+}
+
+.score {
+  width: 80%;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  background-color: var(--col-wheat);
+  color: #000000;
+  padding: 50px 20px;
+  margin-bottom: 50px;
+  font-size: 30px;
+  display: none;
 }
 
 @keyframes pulse {
@@ -246,5 +231,23 @@ li:hover {
   100% {
     transform: scale(0.95);
     box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+  }
+}
+
+@media (max-width: 1000px) {
+  .quiz-container {
+    width: 90%;
+  }
+}
+
+@media (max-width: 600px) {
+  .question {
+    width: 90%;
+    font-size: 20px;
+    padding: 130px 50px;
+  }
+
+  .next-questionBtn {
+    width: 70%;
   }
 }
